<resources>
    <string name="app_name">Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="scroll_view">Scroll</string>
    <string name="instagram">Instagram</string>
    <string name="horizontal_scroll">Horizontal_scroll</string>

</resources>