<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemHome"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/itemSearch"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/itemAddPost"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="@string/post"

        />

    <item
        android:id="@+id/itemNotification"
        android:enabled="true"
        android:icon="@drawable/heart"
        android:title="@string/notification"/>

    <item
        android:id="@+id/itemProfile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>




</menu>